--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.3/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.9.3/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyDdojUJijQGz5r8uMEod3YU1WrBo3d-9Zw",
+    authDomain: "starlingnetworks.firebaseapp.com",
+    projectId: "starlingnetworks",
+    storageBucket: "starlingnetworks.appspot.com",
+    messagingSenderId: "394099183161",
+    appId: "1:394099183161:web:d4f5942e3e8c1ff9fac7e8",
+    measurementId: "G-618V891P96"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
