--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<head></head>
+<body>
 <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.3/firebase-app.js";
@@ -21,3 +23,4 @@
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
 </script>
+</body>
